--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.App.app</groupId>
+  <groupId>com.App1.app1</groupId>
   <artifactId>Practice</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Hello World</name>
